--- a/src/styles/formSection.module.css
+++ b/src/styles/formSection.module.css
@@ -1,17 +1,3 @@
-.header {
-    width: 50%;
-    padding-top: 100%;
-}
-
-.subtitle {
-    font-size: 14px;
-}
-
-.logo {
-    width: 12%;
-    margin-bottom: 10%;
-}
-
 /* Conteneur général du formulaire */
 .formSection {
     display: flex;
@@ -21,7 +7,22 @@
     padding-left: 10%;
 }
 
+/* Logo */
+.logo {
+    width: 12%;
+    margin-bottom: 10%;
+}
+
 /* En-tête */
+.header {
+    width: 50%;
+    padding-top: 100%;
+}
+
+.subtitle {
+    font-size: 14px;
+}
+
 .title {
     font-size: 1.5rem;
 }
@@ -57,7 +58,7 @@
     color: rgba(255, 255, 255, 0.7);
 }
 
-/* Ajustements pour le responsive */
+/* Responsive */
 @media (max-width: 768px) {
     
     .formSection {
